--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,25 +3,24 @@
   "name": "Crypto Vision",
   "description": "Extension to easily look up price of cryptocurrency",
   "version": "1.0",
+  "omnibox": { "keyword" : "cv" },
   "action": {
-    "default_icon": {                   
-      "16": "logo.png",
-      "38": "logo.png",
-      "48": "logo.png",
-      "128": "logo.png"        
-    },
+    "default_icon": "icons/logo.png",
     "default_title": "Crypto Vision",
     "default_popup": "popup.html"
   },
   "icons": {
-    "16": "logo.png",
-    "32": "logo.png",
-    "48": "logo.png",
-    "128": "logo.png"
+    "16": "icons/logo.png",
+    "32": "icons/logo.png",
+    "48": "icons/logo.png",
+    "128": "icons/logo.png"
   },
   "permissions": [
     "storage"
   ],
+  "background": {
+    "service_worker": "service_worker.js"
+  },
   "content_scripts": [
     {
       "js": ["content_script_main.js"],
