--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "coinprice",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --config webpack/webpack.config.js",
-    "watch": "webpack --config webpack/webpack.config.js --watch"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/chrome": "^0.0.236",
-    "copy-webpack-plugin": "^11.0.0",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "webpack": "^5.83.1",
-    "webpack-cli": "^5.1.1"
-  },
-  "dependencies": {
-    "vector2": "^0.1.1"
-  }
+    "name": "cryptovision",
+    "version": "1.0.1",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "webpack --config webpack/webpack.config.js",
+        "watch": "webpack --config webpack/webpack.config.js --watch"
+    },
+    "keywords": [],
+    "author": "Iaroslav Titov",
+    "devDependencies": {
+        "@types/chrome": "^0.0.236",
+        "copy-webpack-plugin": "^11.0.0",
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.4",
+        "webpack": "^5.83.1",
+        "webpack-cli": "^5.1.1"
+    },
+    "dependencies": {
+        "vector2": "^0.1.1"
+    }
 }
