--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,33 +1,29 @@
 {
-  "manifest_version": 3,
-  "name": "Crypto Vision",
-  "description": "Extension to easily look up price of cryptocurrency",
-  "version": "1.0",
-  "omnibox": { "keyword" : "cv" },
-  "action": {
-    "default_icon": "icons/logo.png",
-    "default_title": "Crypto Vision",
-    "default_popup": "popup.html"
-  },
-  "icons": {
-    "16": "icons/logo.png",
-    "32": "icons/logo.png",
-    "48": "icons/logo.png",
-    "128": "icons/logo.png"
-  },
-  "permissions": [
-    "storage"
-  ],
-  "background": {
-    "service_worker": "service_worker.js"
-  },
-  "content_scripts": [
-    {
-      "js": ["content_script_main.js"],
-      "css": ["crypto_vision_style.css"],
-      "matches": [
-        "<all_urls>"
-      ]
-    }
-  ]
+    "manifest_version": 3,
+    "name": "Crypto Vision",
+    "description": "Extension to easily look up price of cryptocurrency",
+    "version": "1.1",
+    "omnibox": { "keyword": "cv" },
+    "action": {
+        "default_icon": "icons/logo.png",
+        "default_title": "Crypto Vision",
+        "default_popup": "popup.html"
+    },
+    "icons": {
+        "16": "icons/logo.png",
+        "32": "icons/logo.png",
+        "48": "icons/logo.png",
+        "128": "icons/logo.png"
+    },
+    "permissions": ["storage"],
+    "background": {
+        "service_worker": "service_worker.js"
+    },
+    "content_scripts": [
+        {
+            "js": ["content_script_main.js"],
+            "css": ["crypto_vision_style.css"],
+            "matches": ["<all_urls>"]
+        }
+    ]
 }
