--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "webpack --config webpack/webpack.config.js",
-        "watch": "webpack --config webpack/webpack.config.js --watch"
+        "build": "webpack --config webpack.config.js",
+        "watch": "webpack --config webpack.config.js --watch"
     },
     "keywords": [],
     "author": "Iaroslav Titov",
